--- a/cmd/faucet/Cargo.toml
+++ b/cmd/faucet/Cargo.toml
@@ -11,8 +11,8 @@ anyhow = "1.0.38"
 tiny_http = "0.6"
 futures = "0.3.12"
 hex = { version = "0.4.3", default-features = false }
-tokio = { version = "0.2", features = ["full"] }
-tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
+tokio = { version = "1.3.0", features = ["full"] }
+#tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
 futures-timer = "3.0"
 ascii = "0.8"
 rust-embed = "5.9.0"
