--- a/cmd/miner_client/Cargo.toml
+++ b/cmd/miner_client/Cargo.toml
@@ -6,15 +6,15 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.38"
-actix = "0.10.0"
-actix-rt = "1.1"
+actix = "0.11.0-beta.3"
+actix-rt = "2.1.0"
 async-std = "1.9"
 futures = "0.3.12"
 starcoin-config = { path = "../../config" }
 starcoin-types = { path = "../../types" }
 traits = { path = "../../core/traits", package = "starcoin-traits" }
 consensus = { path = "../../consensus", package = "starcoin-consensus" }
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "1.3.0", features = ["full"] }
 logger = { path = "../../commons/logger", package = "starcoin-logger" }
 futures-channel = "0.3"
 crypto = { package = "starcoin-crypto", path = "../../commons/crypto" }
