--- a/commons/service-registry/Cargo.toml
+++ b/commons/service-registry/Cargo.toml
@@ -12,8 +12,8 @@ anyhow = "1.0"
 thiserror = "1.0"
 async-trait = "0.1"
 backtrace = "0.3.55"
-actix = "0.10.0"
-actix-rt = "1.1"
+actix = "0.11.0-beta.3"
+actix-rt = "2.1.0"
 futures = "0.3.12"
 futures-timer = "3.0"
 serde = { version = "1.0.124", features = ["derive"] }
