--- a/commons/stest/stest-macro/Cargo.toml
+++ b/commons/stest/stest-macro/Cargo.toml
@@ -16,6 +16,6 @@ darling = "0.10.2"
 proc-macro2 = "1.0"
 
 [dev-dependencies]
-actix = "0.10.0-alpha.3"
-actix-rt = { version = "1.1" }
+actix = "0.11.0-beta.3"
+actix-rt = "2.1.0"
 stest = { path = "../../stest"}
