--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -10,9 +10,9 @@ edition = "2018"
 anyhow = "1.0.38"
 thiserror = "1.0"
 backtrace = "0.3.55"
-actix = "0.10.0"
-actix-rt = "1.1"
-tokio = { version = "0.2", features = ["full"] }
+actix = "0.11.0-beta.3"
+actix-rt = "2.1.0"
+tokio = { version = "1.3.0", features = ["full"] }
 futures = "0.3.12"
 futures-timer = "3.0"
 async-trait = "0.1"
