--- a/rpc/client/Cargo.toml
+++ b/rpc/client/Cargo.toml
@@ -12,9 +12,9 @@ thiserror = "1.0"
 serde = { version = "1.0.124", features = ["derive"] }
 serde_json = { version="1.0", features = ["arbitrary_precision"]}
 hex = "~0.4"
-actix = "0.10.0"
-actix-rt = "1.1"
-tokio = "0.2"
+actix = "0.11.0-beta.3"
+actix-rt = "2.1.0"
+tokio = "1.3.0"
 log = "0.4.14"
 parking_lot = "0.11.1"
 jsonrpc-core = { version = "17.0.0", features = ["arbitrary_precision"] }
